--- a/index.html
+++ b/index.html
@@ -7,57 +7,35 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
 :root{
-  /* tavolozza e variabili dal layout “Girone A/B” */
-  --c-bg:#000;              /* sfondo app */
-  --c-surface:#151515;      /* header tabella */
-  --c-text:#fff;
-  --c-subtext:#b3b3b3;
-  --accent:#ff6300;         /* arancione Kings League */
-  --radius-card:18px;       /* tabella */
-  --radius-small:6px;       /* card piccole (striscia) */
-  --shadow-card:0 6px 16px rgba(0,0,0,.75);
-  --bar-height:34px;        /* altezza striscia */
+  --c-bg:#000;--c-surface:#151515;--c-text:#fff;--c-subtext:#b3b3b3;
+  --accent:#ff6300;--radius-card:18px;--radius-small:6px;
+  --shadow-card:0 6px 16px rgba(0,0,0,.75);--bar-height:34px;
   font-family:Inter,system-ui,sans-serif;
 }
-
-/* layout base */
 html,body{margin:0;background:var(--c-bg);color:var(--c-text);overflow-x:hidden}
 
-/* ───────── STRISCIA “MARCA­TORI” ───────── */
+/* ───── Striscia “Marcatori” ───── */
 .stage-bar{
   display:flex;justify-content:center;align-items:center;
-  margin:8px 16px 16px;                /* gap identico a Girone A/B */
-  height:var(--bar-height);
-  background:var(--c-bg);
-  border:1px solid var(--accent);
-  border-radius:var(--radius-small);
-  box-shadow:0 4px 12px #0009;
+  margin:8px 16px 16px;height:var(--bar-height);
+  background:var(--c-bg);border:1px solid var(--accent);
+  border-radius:var(--radius-small);box-shadow:0 4px 12px #0009;
 }
-.stage-bar__label{
-  font-size:13px;font-weight:600;letter-spacing:.2px;color:var(--accent);
-  user-select:none;
-}
+.stage-bar__label{font-size:13px;font-weight:600;letter-spacing:.2px;color:var(--accent)}
 
-/* ───────── WRAPPER TABELLA ───────── */
+/* ───── Tabella ───── */
 .table-wrapper{
-  width:100%;margin:0 auto 24px;
+  width:100%;margin:0 auto 24px;border-radius:var(--radius-card);
   background:#000;
   background-image:repeating-linear-gradient(45deg,rgba(255,255,255,.03) 0 8px,transparent 8px 16px);
-  border-radius:var(--radius-card);
-  box-shadow:var(--shadow-card);
-  overflow:hidden;                    /* nessuno scroll orizzontale */
+  box-shadow:var(--shadow-card);overflow:hidden;
 }
 table{width:100%;border-collapse:collapse;table-layout:fixed}
-
-/* ─ HEAD & CELL ─ */
 thead th{
-  background:var(--c-surface);color:var(--c-subtext);
-  font:600 .8rem/1.2 Inter,system-ui,sans-serif;letter-spacing:.15px;
+  background:var(--c-surface);color:var(--c-subtext);font:600 .8rem/1.2 Inter;
   text-transform:uppercase;padding:14px 20px;position:sticky;top:0;z-index:2
 }
-thead th:first-child,tbody td:first-child{
-  position:sticky;left:0;background:var(--c-surface);z-index:3
-}
+thead th:first-child,tbody td:first-child{position:sticky;left:0;background:var(--c-surface);z-index:3}
 tbody td{padding:18px 20px;border-bottom:1px solid #222;font-size:.95rem}
 tbody tr:last-child td{border-bottom:none}
 
@@ -69,15 +47,16 @@ thead th:nth-child(3),tbody td:nth-child(3){width:80%;text-align:left}
 /* cella giocatore */
 .team-cell{display:flex;align-items:center;gap:10px}
 .team-cell img{width:34px;height:34px;object-fit:contain;filter:drop-shadow(0 0 2px #0009)}
+.team-cell span{line-height:1.15}
 
-/* break-point 480 px */
+/* breakpoint 480 px */
 @media(max-width:480px){
   thead th,tbody td{padding:14px 12px;font-size:.85rem}
   thead th:nth-child(1),tbody td:nth-child(1){width:20%}
   thead th:nth-child(2),tbody td:nth-child(2){width:20%}
   thead th:nth-child(3),tbody td:nth-child(3){width:60%}
 }
-/* break-point 360 px */
+/* breakpoint 360 px */
 @media(max-width:360px){
   thead th,tbody td{padding:12px 8px;font-size:.78rem}
 }
@@ -85,80 +64,87 @@ thead th:nth-child(3),tbody td:nth-child(3){width:80%;text-align:left}
 </head>
 <body>
 
-<!-- striscia stile “card giornata” ma statica -->
+<!-- Striscia titolo -->
 <div class="stage-bar"><div class="stage-bar__label">Marcatori</div></div>
 
-<!-- tabella -->
+<!-- Tabella -->
 <div class="table-wrapper">
   <table id="marcatori"><thead></thead><tbody></tbody></table>
 </div>
 
 <script>
-/* ───────── CONFIG ───────── */
-const SHEET_ID='1Mrrk26hjH2N_7lgqpDL4ONKz3BjPw0xHQ74KN-g8414';
-const TAB      ='MarcatoriGruppoA';
-const IMG_BASE ='https://francescacaleandro.github.io/table1/images/';
+/* ───── Config ───── */
+const SHEET_ID = '1Mrrk26hjH2N_7lgqpDL4ONKz3BjPw0xHQ74KN-g8414';
+const TAB      = 'MarcatoriGruppoA';
+const IMG_BASE = 'https://francescacaleandro.github.io/table1/images/';
 
-/* ───────── CARICA DATI ───────── */
+/* ───── Carica dati ───── */
 document.addEventListener('DOMContentLoaded', async ()=>{
   try{
-    const res=await fetch(`https://opensheet.elk.sh/${SHEET_ID}/${encodeURIComponent(TAB)}`);
+    const res  = await fetch(`https://opensheet.elk.sh/${SHEET_ID}/${encodeURIComponent(TAB)}`);
     if(!res.ok) throw new Error(res.status);
-    const rows=await res.json(); if(!rows.length) return;
-    buildTable(rows);
-    sendHeight();               // al primo render
+    const rows = await res.json(); if(!rows.length) return;
+    buildTable(rows); sendHeight();
   }catch(e){console.error(e)}
 });
 
-/* ───────── BUILD TABLE ───────── */
+/* ───── Costruisci tabella ───── */
 function buildTable(data){
-  const map=Object.keys(data[0]).reduce((m,k)=>{m[k.toLowerCase()]=k;return m;},{}),
-        POS=map.pos,G=map.g,PLY=map.giocatore,
-        LOGO=Object.keys(data[0]).find(k=>k.toLowerCase().includes('logo'));
+  const map = Object.keys(data[0]).reduce((m,k)=>{m[k.toLowerCase()]=k;return m;},{}),
+        POS = map.pos, G = map.g, PLY = map.giocatore,
+        LOGO = Object.keys(data[0]).find(k=>k.toLowerCase().includes('logo'));
 
-  const clean=data.filter(r=>/^\d+$/.test(r[POS])).sort((a,b)=>a[POS]-b[POS]);
-  const table=document.getElementById('marcatori');
+  const clean = data.filter(r=>/^\d+$/.test(r[POS])).sort((a,b)=>a[POS]-b[POS]);
+  const table = document.getElementById('marcatori');
 
-  /* HEAD */
-  const thead=table.createTHead().insertRow();
+  /* Head */
+  const thead = table.createTHead().insertRow();
   [POS,G,PLY].forEach(k=>{
-    const th=document.createElement('th');
-    th.textContent = k===PLY?'Giocatore':k;
+    const th = document.createElement('th');
+    th.textContent = k===PLY ? 'Giocatore' : k;
     thead.appendChild(th);
   });
 
-  /* BODY */
-  const tbody=table.createTBody();
+  /* Body */
+  const tbody = table.createTBody();
   clean.forEach(r=>{
-    const tr=tbody.insertRow();
+    const tr = tbody.insertRow();
+
     /* POS */
-    tr.insertCell().textContent=r[POS];
-    /* G */
-    tr.insertCell().textContent=r[G];
-    /* Giocatore + logo */
-    const td=tr.insertCell();
-    const wrap=document.createElement('div');wrap.className='team-cell';
-    const file=r[LOGO]?.trim();
+    tr.insertCell().textContent = r[POS];
+
+    /* Gol */
+    tr.insertCell().textContent = r[G];
+
+    /* Giocatore + logo con nome\ncognome */
+    const td   = tr.insertCell();
+    const wrap = document.createElement('div'); wrap.className = 'team-cell';
+
+    const file = r[LOGO]?.trim();
     if(file){
-      const img=new Image(34,34);
-      img.src=IMG_BASE+file; img.alt=r[PLY];
-      img.onerror=()=>img.remove();
+      const img = new Image(34,34);
+      img.src = IMG_BASE + file; img.alt = r[PLY];
+      img.onerror = ()=> img.remove();
       wrap.appendChild(img);
     }
-    const span=document.createElement('span');span.textContent=r[PLY];
-    wrap.appendChild(span); td.appendChild(wrap);
+
+    const span = document.createElement('span');
+    const full = (r[PLY] || '').trim();
+    const idx  = full.lastIndexOf(' ');
+    span.innerHTML = idx > 0 ? full.slice(0, idx) + '<br>' + full.slice(idx + 1) : full;
+    wrap.appendChild(span);
+
+    td.appendChild(wrap);
   });
 }
 
-/* ───────── INVIA ALTEZZA A WIX ───────── */
+/* ───── Comunica altezza a Wix ───── */
 function sendHeight(){
-  const h=document.documentElement.scrollHeight;
-  /* Wix (Editor X / classic) usa type:setHeight */
+  const h = document.documentElement.scrollHeight;
   parent.postMessage(JSON.stringify({type:'setHeight',height:h}), '*');
-  /* alcune versioni usano ancora type:resize */
   parent.postMessage(JSON.stringify({type:'resize',height:h}), '*');
 }
-window.addEventListener('resize',()=>{ clearTimeout(window.__r); window.__r=setTimeout(sendHeight,150); });
+window.addEventListener('resize',()=>{clearTimeout(window.__r);window.__r=setTimeout(sendHeight,150);});
 </script>
 </body>
 </html>
